# peek

./: .gitignore  CONTRIBUTING.md  README.md  build-release.sh.template  package-lock.json  package.json
.github/workflows/: ci.yml
Application/: build.gradle  gradle.properties  settings.gradle
Application/LinkBubble/: proguard-rules.pro
Application/LinkBubble/src/debug/res/values/: strings.xml
Application/LinkBubble/src/main/: AndroidManifest.xml.template
Application/LinkBubble/src/main/assets/pagescripts/: FetchContent.js  SelectElements.js  ThemeColor.js
Application/LinkBubble/src/main/res/drawable/: dropdown_background_light.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_stat.xml
Application/LinkBubble/src/main/res/layout/: activity_history.xml  activity_settings.xml  activity_settings_domains.xml  activity_settings_help.xml  app_picker_list_item_multiple.xml  app_picker_list_item_single.xml  history_item.xml  view_accept_terms.xml  view_add_domain.xml  view_close_tab_target.xml  view_content.xml  view_faq_item.xml  view_grant_overlay_permission.xml  view_stat_time_per_link.xml  view_stat_total_time.xml  view_tab.xml
Application/LinkBubble/src/main/res/values/: strings.xml  styles.xml
Application/Peek/: build.gradle
Application/Peek/src/main/: AndroidManifest.xml.template
Application/Peek/src/main/assets/: test.html
Application/Peek/src/main/jni/: CMakeLists.txt  com_peek_browser_adblock_ABPFilterParser.h  main.cpp
docs/: ROADMAP.md
scripts/: copyJNIFiles.js  copyJNIFiles.sh  updateTranslations.js
(+154 files in other folders)
